@@ -1,18 +1,0 @@
-/*-------------------------------------------------------------------------*/
-/* File name : G19990210_2                                                 */
-/*           :                                                             */
-/* Cause     :                                                             */
-/*           :                                                             */
-/* Message   : G19990210_2.java: In class `G19990210_2':                   */
-/*           : G19990210_2.java: In method `foo()':                        */
-/*           : G19990210_2.java:5: Missing return statement.               */
-/*           :         }                                                   */
-/*           :         ^                                                   */
-/*           : 1 error                                                     */
-/*-------------------------------------------------------------------------*/
-public class G19990210_2  {
-  public int foo () {
-	return 1;
-	;
-  }
-}
